complete refactor for ozon create report